--- a/src/pages/ShipmentsListPage/DataTable.scss
+++ b/src/pages/ShipmentsListPage/DataTable.scss
@@ -24,7 +24,6 @@ table {
   }
 
   th {
-    text-align: center !important;
     padding: 5px;
     border: hidden !important;
     color: #a4a4a4 !important;
@@ -32,16 +31,31 @@ table {
   }
 
   td {
-    padding: 18px 0px !important;
+    padding: 18px 10px !important;
     background: #fff;
     border: hidden !important;
   }
 
-  p {
-    margin-bottom: 0;
-    color: #3b3b3b !important;
-    font-size: 15px !important;
-    font-weight: 500 !important;
+  .badge {
+    padding: 0;
+    width: 100%;
+
+    p {
+      text-align: left;
+      color: #3b3b3b;
+      margin-bottom: 3px;
+      font-size: 15px;
+      font-weight: 500;
+    }
+
+    p.highlighted-text {
+      color: #fc6600;
+      // background-color: lighten(#fc6600, 32);
+      background-color: #ffe5d3;
+      text-align: center;
+      padding: 5px 0;
+      border-radius: 4px;
+    }
   }
 }
 
